mod_base: allow other libs to import z.icons.less

--- a/modules/mod_base/lib/less/icon-buttons.less
+++ b/modules/mod_base/lib/less/icon-buttons.less
@@ -16,7 +16,7 @@
     background-color: transparent;
 
     &:hover {
-        .extend_icon(icon-cross-circle);
+        .extend_icon(z, icon-cross-circle);
         text-decoration: none;
     }
 }
