--- a/modules/mod_base/lib/less/extend.less
+++ b/modules/mod_base/lib/less/extend.less
@@ -1,6 +1,15 @@
+// Extend a class with a Zotonic icon class
 .extend_icon(@name) {
     .extend_icon(z, @name);
 }
+
+
+// Extend a class with a Zotonic icon class
+//
+// Example:
+// .z-btn-help {
+//    .extend_icon(z, icon-help-circle);
+// }
 
 .extend_icon(z, @name) {
     &:before {
@@ -8,6 +17,14 @@
         content: @@name;
     }
 }
+
+
+// Extend a class with a Font Awesome class
+//
+// Example:
+// .btn-bookmark {
+//    .extend_icon(fa, fa-var-bookmark);
+// }
 
 .extend_icon(fa, @name) {
     &:before {
