--- a/modules/mod_admin/lib/css/zotonic-admin.css
+++ b/modules/mod_admin/lib/css/zotonic-admin.css
@@ -99,11 +99,11 @@ ul.blocks.ui-sortable .widget-header:before {
 .z-icon-ok-circle:before {
   font-family: 'FontAwesome';
 }
-.z-icon-cross:before {
-  content: "\e60c";
-}
 .z-icon-cross-circle:before {
   content: "\e609";
+}
+.z-icon-cross:before {
+  content: "\e60c";
 }
 .z-icon-drag:before {
   content: "\e60b";
@@ -117,8 +117,20 @@ ul.blocks.ui-sortable .widget-header:before {
 .z-icon-info-circle:before {
   content: "\e601";
 }
+.z-icon-logo-z:before {
+  content: "\e607";
+}
 .z-icon-logo:before {
   content: "\5a";
+}
+.z-icon-minus-circle:before {
+  content: "\e603";
+}
+.z-icon-ok-circle:before {
+  content: "\e602";
+}
+.z-icon-plus-circle:before {
+  content: "\e604";
 }
 .z-icon-user:before {
   content: "\e605";
