--- a/modules/mod_base/lib/less/icons.less
+++ b/modules/mod_base/lib/less/icons.less
@@ -1,10 +1,14 @@
-.z-icon-cross:before { content: @icon-cross; }
 .z-icon-cross-circle:before { content: @icon-cross-circle; }
+.z-icon-cross:before { content: @icon-cross; }
 .z-icon-drag:before { content: @icon-drag; }
 .z-icon-edit:before { content: @icon-edit; }
 .z-icon-help-circle:before { content: @icon-help-circle; }
 .z-icon-info-circle:before { content: @icon-info-circle; }
+.z-icon-logo-z:before { content: @icon-logo-z; }
 .z-icon-logo:before { content: @icon-logo; }
+.z-icon-minus-circle:before { content: @icon-minus-circle; }
+.z-icon-ok-circle:before { content: @icon-ok-circle; }
+.z-icon-plus-circle:before { content: @icon-plus-circle; }
 .z-icon-user:before { content: @icon-user; }
 .zotonic-logo:before { content: @zotonic-logo; }
 
