--- a/modules/mod_base/lib/less/icon-buttons.less
+++ b/modules/mod_base/lib/less/icon-buttons.less
@@ -9,6 +9,11 @@
     padding: 0;
     cursor: pointer;
     text-shadow: none;
+    
+    > span,
+    > em {
+        display: none;
+    }
 }
 
 .z-btn-remove {
