--- a/modules/mod_base/lib/less/variables.less
+++ b/modules/mod_base/lib/less/variables.less
@@ -4,16 +4,20 @@
 @zRoundBtnSize: 16px;
 
 // Icon chars
-@icon-cross-circle: "\e609";
 @icon-cross: "\e60c";
+@icon-cross-circle: "\e609";
 @icon-drag: "\e60b";
 @icon-edit: "\e606";
+@icon-help: "\e60e";
 @icon-help-circle: "\e600";
 @icon-info-circle: "\e601";
 @icon-logo-z: "\e607";
 @icon-logo: "\5a";
+@icon-minus: "\e60a";
 @icon-minus-circle: "\e603";
+@icon-ok: "\e608";
 @icon-ok-circle: "\e602";
+@icon-plus: "\e60d";
 @icon-plus-circle: "\e604";
 @icon-user: "\e605";
 @zotonic-logo: @icon-logo;
