mod_base: make icon extend cleaner

--- a/modules/mod_base/lib/less/z.icons.less
+++ b/modules/mod_base/lib/less/z.icons.less
@@ -41,7 +41,7 @@ For advanced usage, see the file z.icons.less.
 // ... then call mixin .extend_icon(@name),
 // where @name is one of the the icon names below.
 // This will automatically extend your class to 'z-icon'.
-// Find the mixin in 'extend.less'.
+// Find the mixin in 'z.icons/extend.less'.
 //
 // Example:
 // 
@@ -71,10 +71,11 @@ For advanced usage, see the file z.icons.less.
 // 'mod_artwork/lib/font-awesome-4/less/variables.less'.
 
 
-@import "variables.less";
-@import "path.less";
-@import "core.less";
-@import "extend.less";
-@import "icons.less";
-@import "icon-buttons.less";
+@import "z.icons/variables.less";
+@import "z.icons/path.less";
+@import "z.icons/core.less";
+@import "z.icons/extend.less";
+@import "z.icons/icons.less";
+@import "z.icons/icon-buttons.less";
 @import (reference) "font-awesome.less";
+.z_icons_create;
