--- a/modules/mod_base/lib/less/z.icons/extend.less
+++ b/modules/mod_base/lib/less/z.icons/extend.less
@@ -1,3 +1,6 @@
+@import (reference) "variables.less";
+@import (reference) "core.less";
+
 // Extend a class with a Zotonic icon class
 .extend_icon(@name) {
     .extend_icon(z, @name);
