--- a/modules/mod_admin/lib/less/edit.less
+++ b/modules/mod_admin/lib/less/edit.less
@@ -87,6 +87,7 @@ div.admin-header h2 {
     margin-top: 0;
     margin-bottom: 18px;
     color: #333;
+    &:extend(.admin-word-break);
 }
 
 div.admin-edit-media {
