--- a/modules/mod_admin/lib/less/thumbnails.less
+++ b/modules/mod_admin/lib/less/thumbnails.less
@@ -78,7 +78,7 @@
             margin: 0;
         }
         h5, h6 {
-            .word_break;
+            &:extend(.admin-word-break);
         }
         h5 {
             font-weight: bold;
