--- a/modules/mod_admin/lib/less/variables.less
+++ b/modules/mod_admin/lib/less/variables.less
@@ -2,6 +2,8 @@
 @baseMargin: 15px;
 @thumbImageWidth: 80px;
 @thumbImageHeight: 60px;
+@miniThumbImageWidth: @thumbImageWidth / 2;
+@miniThumbImageHeight: @thumbImageHeight / 2;
 @radiusBlockElement: 0px;
 @radiusWidget: @radiusBlockElement;
 @roundBtnSize: 16px;
