admin: include font-awesome version 4

--- a/modules/mod_admin/lib/less/zotonic-admin.less
+++ b/modules/mod_admin/lib/less/zotonic-admin.less
@@ -21,6 +21,7 @@ limitations under the License.
 
 @import "variables.less";
 @import "../../../mod_base/lib/less/z.icons.less";
+@import "../../../mod_artwork/lib/font-awesome-4/less/path.less";
 @import "mixins.less";
 @import "base.less";
 @import "bootstrap-overrides.less";
