--- a/modules/mod_admin/lib/less/bootstrap-overrides.less
+++ b/modules/mod_admin/lib/less/bootstrap-overrides.less
@@ -105,3 +105,9 @@ button.close {
     margin-right: 10px;
     margin-bottom: 5px;
 }
+
+@media (min-width:768px) {
+    .form-horizontal .control-label {
+        margin-bottom: 5px;
+    }
+}
