--- a/modules/mod_base/lib/less/z.icons/variables.less
+++ b/modules/mod_base/lib/less/z.icons/variables.less
@@ -15,6 +15,7 @@
 @icon-logo: "\5a";
 @icon-minus: "\e60a";
 @icon-minus-circle: "\e603";
+@icon-off: "\e60f";
 @icon-ok: "\e608";
 @icon-ok-circle: "\e602";
 @icon-plus: "\e60d";
