--- a/modules/mod_base/lib/less/z.icons/icons.less
+++ b/modules/mod_base/lib/less/z.icons/icons.less
@@ -3,9 +3,13 @@
     .z-icon-cross-circle:before { content: @icon-cross-circle; }
     .z-icon-drag:before { content: @icon-drag; }
     .z-icon-edit:before { content: @icon-edit; }
+    .z-icon-facebook:before { content: @icon-facebook; }
+    .z-icon-google-plus:before { content: @icon-google-plus; }
     .z-icon-help:before { content: @icon-help; }
     .z-icon-help-circle:before { content: @icon-help-circle; }
     .z-icon-info-circle:before { content: @icon-info-circle; }
+    .z-icon-instagram:before { content: @icon-instagram; }
+    .z-icon-linkedin:before { content: @icon-linkedin; }
     .z-icon-logo-z:before { content: @icon-logo-z; }
     .z-icon-logo:before { content: @icon-logo; }
     .z-icon-minus:before { content: @icon-minus; }
@@ -15,6 +19,7 @@
     .z-icon-ok-circle:before { content: @icon-ok-circle; }
     .z-icon-plus:before { content: @icon-plus; }
     .z-icon-plus-circle:before { content: @icon-plus-circle; }
+    .z-icon-twitter:before { content: @icon-twitter; }
     .z-icon-user:before { content: @icon-user; }
     .zotonic-logo:before { content: @zotonic-logo; }
 
