--- a/modules/mod_base/lib/less/z.icons/variables.less
+++ b/modules/mod_base/lib/less/z.icons/variables.less
@@ -2,15 +2,20 @@
 @zVersion: 1;
 @zFontFamily: "Zotonic";
 @zRoundBtnSize: 16px;
+@zSocialBtnSize: 16px;
 
 // Icon chars
 @icon-cross: "\e60c";
 @icon-cross-circle: "\e609";
 @icon-drag: "\e60b";
 @icon-edit: "\e606";
+@icon-facebook: "\e614";
+@icon-google-plus: "\e610";
 @icon-help: "\e60e";
 @icon-help-circle: "\e600";
 @icon-info-circle: "\e601";
+@icon-instagram: "\e612";
+@icon-linkedin: "\e611";
 @icon-logo-z: "\e607";
 @icon-logo: "\5a";
 @icon-minus: "\e60a";
@@ -20,5 +25,6 @@
 @icon-ok-circle: "\e602";
 @icon-plus: "\e60d";
 @icon-plus-circle: "\e604";
+@icon-twitter: "\e613";
 @icon-user: "\e605";
 @zotonic-logo: @icon-logo;
